--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 ./update.sh
+./10/24/pierwiastek
 ./10/15/pinezki
 ./10/15/losowa
+./10/28/psikus1
+./10/20/wyszukiwanie_binarne
 ./07/28/friday
 ./07/28/sztanga
 ./07/28/zbiory
