--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 ./10/24/pierwiastek
 ./10/15/pinezki
 ./10/15/losowa
+./10/31/linie_montaz
 ./10/28/psikus1
 ./10/20/wyszukiwanie_binarne
 ./07/28/friday
