--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,19 @@
 ./07/28/friday
 ./07/28/sztanga
 ./07/28/zbiory
+./11/15/gta
+./11/15/kwadratowanie
+./11/05/programy
+./11/05/dwukrotnosc_sumy_cyfr
+./11/07/dwukrotnosc_sumy_cyfr
+./11/11/wskazniki
+./11/14/bankiet
+./11/14/najdluzszy_wspolny_podciag
+./11/18/krolowe
+./11/25/brydz
 ./11/04/zegarek
+./11/17/wszystkie_ciagi
+./11/21/zbieranie
 ./.git/hooks/pre-rebase.sample
 ./.git/hooks/pre-applypatch.sample
 ./.git/hooks/prepare-commit-msg.sample
