--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@
 ./11/25/brydz
 ./11/04/zegarek
 ./11/17/wszystkie_ciagi
+./11/26/zmienno
 ./11/21/zbieranie
 ./.git/hooks/pre-rebase.sample
 ./.git/hooks/pre-applypatch.sample
@@ -33,6 +34,7 @@
 ./.git/hooks/post-update.sample
 ./.git/hooks/pre-push.sample
 ./.git/hooks/pre-merge-commit.sample
+./12/liczby_slownie
 ./08/05/choinka
 ./08/05/dzielniki
 ./08/22/halloween
