--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,7 @@
 ./.git/hooks/post-update.sample
 ./.git/hooks/pre-push.sample
 ./.git/hooks/pre-merge-commit.sample
-./12/liczby_slownie
+./12/02/liczby_slownie
 ./08/05/choinka
 ./08/05/dzielniki
 ./08/22/halloween
