--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,8 @@
 ./.git/hooks/post-update.sample
 ./.git/hooks/pre-push.sample
 ./.git/hooks/pre-merge-commit.sample
+./12/09/tyrolka3
+./12/10/liczby_slownie
 ./12/03/tyrolka
 ./12/02/liczby_slownie
 ./08/05/choinka
