--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@
 ./12/09/tyrolka3
 ./12/10/liczby_slownie
 ./12/03/tyrolka
+./12/12/ogrodzenie
 ./12/02/liczby_slownie
 ./08/05/choinka
 ./08/05/dzielniki
