--- a/.gitignore
+++ b/.gitignore
@@ -35,10 +35,15 @@
 ./.git/hooks/pre-push.sample
 ./.git/hooks/pre-merge-commit.sample
 ./12/09/tyrolka3
+./12/23/drzewa
+./12/23/porzadek
 ./12/10/liczby_slownie
 ./12/03/tyrolka
 ./12/12/ogrodzenie
+./12/16/waz
+./12/16/waz2
 ./12/02/liczby_slownie
+./12/17/liczby_krol
 ./08/05/choinka
 ./08/05/dzielniki
 ./08/22/halloween
