--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,8 @@
 ./2021/01/05/zygzak
 ./2021/01/06/pocztowka
 ./2021/01/06/kaledarze
+./2021/01/14/podciagi_parz
+./2021/01/14/dziwne
+./2021/01/14/podciag_parz
+./2021/01/25/szachy
+./2021/01/25/szachy2
